data/diff_tests/v8/nop_IncorrectBranchTargetResolution_12.wast
;; 3. **Multiple Consecutive `nop` with Conditional Branching**: Design a sequence involving multiple consecutive `nop` instructions interspersed with conditional branching (`br_if`). Ensure that `br_if` targets the accurate block and test if the no-operations (NOPs) introduce incorrect branch resolution.

(assert_malformed
  (module
    (func $multiple-nop (param i32) (result i32)
      (block $label
        (nop)
        (nop)
        (br_if 0 (local.get 0))
        (nop)
        (nop)
        (nop)
        (i32.const 1)
      )
      (i32.const 0)
    )
  )
  "br_if target invalid block"
)